# scope

./: .gitignore  Makefile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
backend/: image.py  main.py  package.json
scripts/: web.sh  workers.sh
web/: README.md  package.json  wrangler.toml
web/src/: App.tsx
web/src/components/: Chat.tsx  ChatHistory.tsx  InputArea.tsx
web/src/lib/: store.ts
workers/: .env.example  wrangler.toml
workers/src/: index.ts
