[project]
name = "scope"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "modal>=1.2.4",
    "nnsight>=0.5.12",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
where = ["backend"]
exclude = ["web*", "workers*", "node_modules*"]
